// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Text checkGrammar=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkGrammar=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkHighlight=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkHighlight=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkSpaces=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkSpaces=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text className="my-classname" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text my-classname uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text className="test-classname" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text test-classname uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Text content=12345 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Text controlled=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text controlled=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text default props 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text disabled=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text disabled=false 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text disabled=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-disabled uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Text disabled=true 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-disabled uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Text docKit examples UU5.Bricks.Text should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Text
    id="uuID02"
    key="uuID02"
  >
    Text in Bricks.Text
  </Text>
  <Text
    disabled={true}
    id="uuID03"
    key="uuID03"
  >
    Text is disabled in Bricks.Text
  </Text>
  <Text
    className="center"
    colorSchema="cyan"
    id="uuID04"
    key="uuID04"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </Text>
  <br
    key="uu5-content-3"
  />
  <Text
    id="uuID05"
    key="uuID05"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in leo sed odio dictum pellentesque.
    <Text
      colorSchema="red"
      id="uuID06"
    >
      Suspendisse sagittis accumsan mi, a pulvinar sem luctus nec.
    </Text>
    Morbi pharetra eleifend mauris in viverra. Morbi turpis diam.
  </Text>
</div>
`;

exports[`UU5.Bricks.Text dynamic=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text dynamic=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu-fulltextsearch-0 uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text fullTextSearchPriority=0 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu-fulltextsearch-0 uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden=false 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-hidden uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden=true 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-hidden uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text id="myId" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text id="test-id" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text name="myName" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-inline"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="inline" 3`] = `
<span
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-inline"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="smallBox" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text noPrint=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text noPrint=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text pureRender=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text pureRender=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text selected=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text selected=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-selected uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text style={"margin":8} 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text textCorrector=false 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text textCorrector=true 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
